--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,7 @@ body {
     font-family: Calibri, Helvetica, sans-serif;
     border: 2px dotted green;
     padding: 30px;
+    font-size: 62.5%;
 }
 
 img {
@@ -20,7 +21,7 @@ a:link {
 }
 
 a:visited {
-    color: #cfc;
+    color: #060;
 }
 
 a:hover {
@@ -32,6 +33,29 @@ a:active {
     color: #ccc;
 }
 
+h1 + p, h2 + p, h3 + p, h4 + p {
+    margin-top: 0;
+}
+
+h1 {
+    margin-top: 1.6rem;
+    margin-bottom: 0.5rem;
+}
+
+h2 {
+    margin-top: 1.4rem;
+    margin-bottom: 0.4rem;
+}
+
+p {
+    margin-top: 1.0rem;
+    margin-bottom: 1.0rem;
+}
+
+.wrapper {
+    font-size: 1.0rem;
+}
+
 .learn-list {
     list-style-type: square;
                            
@@ -41,13 +65,17 @@ a:active {
     list-style-type: square;                
 }
 
-.learn-bullet:nth-child(2n) {
-    border: 1px solid red;
-    backgrond: #666;
-}
-
 .learn-bullet {
     color: #000;
+}
+
+.learn-bullet:nth-child(2n) > .learn-shortcut {
+    background: #666;
+    color: #fff;
+}
+
+.learn-shortcut {
+    padding: 0.1rem;
 }
 
 .learn-css-grid {
@@ -58,5 +86,36 @@ a:active {
     width: 250px;
     height: auto;
     
+}
+
+.animated-button {
+    background-color: #f00;
+    transition: all 10s;
+    color: #fff;
+}
+
+.animated-button:link {
+    background-color: #f00;
+    transition: all 10s;
+    color: #fff;
+}
+
+.animated-button:hover {
+    background-color: #00f;
+    transition: all 1s;
+    color: #fff;
+}
+
+.small-box {
+    width: 100px;
+    height: 100px;
+    display: block;
+    float:left;
+    border: 1.0rem solid #000;
+    border-radius: 1.0rem;
+}
+
+.clearfix {
+    clear:both;
 }
 
